1.完善MVT构架 2.实现基本查询工作（有bug）

--- a/templates/student_profile.html
+++ b/templates/student_profile.html
@@ -49,7 +49,7 @@
                 <p>Test</p>
                 <h2>学生信息的查询与更新</h2>
                 <section>
-                    <form method="post" action="php">
+                    <form action="select_student", method="get">
                         <div class="fields">
                             <div class="field half">
                                 <label for="name">用户名</label>
@@ -124,11 +124,11 @@
                 <!-- <span class="image main"><img src="images/pic11.jpg" alt="" /></span> -->
                 <p>Test</p>
                 <section>
-                    <form method="post" action="php">
+                    <form action="select_score", method="get">
                         <div class="fields">
                             <div class="field half">
                                 <label for="name">用户名</label>
-                                <input type="text" name="username" id="username" placeholder="非必填"/>
+                                <input type="text" name="score" id="username" placeholder="非必填"/>
                             </div>
                             <div class="field half">
                                 <label for="name">权限组</label>
