--- a/templates/student_profile.html
+++ b/templates/student_profile.html
@@ -4,9 +4,10 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html lang="zh_cn">
+<html lang="zh_cn" xmlns="http://www.w3.org/1999/html">
 <head>
     <title>操作面板 - 管理员</title>
+    <link rel="shortcut icon" href="/static/images/favicon.ico">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="../static/assets/css/main.css" />
@@ -55,15 +56,6 @@
                                 <label for="name">用户名</label>
                                 <input type="text" name="username" id="username" placeholder="非必填"/>
                             </div>
-                            <div class="field half">
-                                <label for="name">权限组</label>
-                                <select name="auth" id="auth">
-                                    <option value="">- 请选择权限组（非必选） -</option>
-                                    <option value="1">1 管理员</option>
-                                    <option value="2">2 教师</option>
-                                    <option value="3">3 学生</option>
-                                </select>
-                            </div>
                         </div>
                         <ul class="actions">
                             <li><input type="submit" value="查询" class="primary" /></li>
@@ -85,6 +77,7 @@
                             <th>地址</th>
                             <th>简介</th>
                             <th>学院ID</th>
+                            <th>操作</th>
                         </tr>
                         </thead>
                         <tbody>
@@ -100,14 +93,20 @@
                             <td>{{ user.Address }}</td>
                             <td>{{ user.Resume }}</td>
                             <td>{{ user.D_ID }}</td>
+                            <td>
+                                <a href={{ url_for(".dir_update_stu", username=user.St_Name)}} class="button">修改</a>
+                            </td>
                         </tr>
                         {% endfor %}
                         </tbody>
                     </table>
                 </div>
-                </div>
-            </div>
-        <h3>添加信息</h3>
+                <br>
+                <br>
+                <br>
+                <br>
+    <h3>添加信息</h3>
+        <section>
                 <p></p>
                 <div id="add_user_result"></div>
                 <form action="add_student" method="get">
@@ -152,15 +151,6 @@
                             <label for="add_st_id">学院ID</label>
                             <input type="text" name="add_st_id" id="add_st_id" placeholder="必填"/>
                         </div>
-                        <div class="field half">
-                            <label for="add_auth">权限组</label>
-                            <select name="add_auth" id="add_auth">
-                                <option value="0">- 请选择权限组（非必选） -</option>
-                                <option value="1">1 管理员</option>
-                                <option value="2">2 教师</option>
-                                <option value="3">3 学生</option>
-                            </select>
-                        </div>
                     </div>
                     <ul class="actions">
                         <li><input type="submit" value="添加" class="primary" /></li>
@@ -181,15 +171,6 @@
                             <div class="field half">
                                 <label for="name">用户名</label>
                                 <input type="text" name="c_num" id="username" placeholder="非必填"/>
-                            </div>
-                            <div class="field half">
-                                <label for="name">权限组</label>
-                                <select name="auth" id="auth">
-                                    <option value="">- 请选择权限组（非必选） -</option>
-                                    <option value="1">1 管理员</option>
-                                    <option value="2">2 教师</option>
-                                    <option value="3">3 学生</option>
-                                </select>
                             </div>
                         </div>
                         <ul class="actions">
@@ -228,12 +209,13 @@
     <footer id="footer">
         <div class="inner">
             <ul class="copyright">
-                <li>&copy; SteamFinder , Adapted From HTML5 UP</li>
+                <li>thetheorange , Adapted From HTML5 UP</li>
                 <li><i class="icon brands alt fa-php"></i>
                     <i class="icon brands alt fa-html5"></i>
                     <i class="icon brands alt fa-css3"></i>
                     <i class="icon brands alt fa-js"></i>
                     <i class="icon brands alt fa-microsoft"></i>
+                    <i class="icon brands alt fa-python"></i>
                 </li>
             </ul>
         </div>
