--- a/templates/update_student.html
+++ b/templates/update_student.html
@@ -29,7 +29,7 @@
 
     <!-- Header -->
     <header id="header">
-        <a href="https://www.csu.edu.cn" class="logo"><strong>中南大学</strong> <span>教务系统</span></a>
+        <a href="https://www.csu.edu.cn" class="logo"><strong>中南大学</strong> <span>教务系统/管理员/学生与成绩管理/学生管理</span></a>
         <nav class="navbar">
             <a href="#one">学生管理与查询</a>
             <a href="#two">修改学生信息</a>
