修复css加载问题;基本实现鉴权功能

--- a/templates/update_score.html
+++ b/templates/update_score.html
@@ -9,8 +9,8 @@
     <title>操作面板 - 管理员</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <link rel="stylesheet" href="http://127.0.0.1:5000/static/assets/css/main.css" />
-    <noscript><link rel="stylesheet" href="http://127.0.0.1:5000/static/assets/css/noscript.css" /></noscript>
+    <link rel="stylesheet" href="http://{{ ip }}:5000/static/assets/css/main.css" />
+    <noscript><link rel="stylesheet" href="http://{{ ip }}:5000/static/assets/css/noscript.css" /></noscript>
     <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.css">
     <style>
         #OverflowText {
@@ -87,12 +87,12 @@
 
 </div>
 <!-- Scripts -->
-<script src="http://127.0.0.1:5000/static/assets/js/jquery.min.js"></script>
-<script src="http://127.0.0.1:5000/static/assets/js/jquery.scrolly.min.js"></script>
-<script src="http://127.0.0.1:5000/static/assets/js/jquery.scrollex.min.js"></script>
-<script src="http://127.0.0.1:5000/static/assets/js/browser.min.js"></script>
-<script src="http://127.0.0.1:5000/static/assets/js/breakpoints.min.js"></script>
-<script src="http://127.0.0.1:5000/static/assets/js/util.js"></script>
-<script src="http://127.0.0.1:5000/static/assets/js/main.js"></script>
+<script src="http://{{ ip }}:5000/static/assets/js/jquery.min.js"></script>
+<script src="http://{{ ip }}:5000/static/assets/js/jquery.scrolly.min.js"></script>
+<script src="http://{{ ip }}:5000/static/assets/js/jquery.scrollex.min.js"></script>
+<script src="http://{{ ip }}:5000/static/assets/js/browser.min.js"></script>
+<script src="http://{{ ip }}:5000/static/assets/js/breakpoints.min.js"></script>
+<script src="http://{{ ip }}:5000/static/assets/js/util.js"></script>
+<script src="http://{{ ip }}:5000/static/assets/js/main.js"></script>
 
 
