--- a/templates/update_student.html
+++ b/templates/update_student.html
@@ -51,43 +51,43 @@
                     <div class="fields">
                         <div class="field half">
                             <label for="add_username">学生ID</label>
-                            <input type="text" name="add_stu_id" id="add_username" placeholder={{ user.St_ID }}/>
+                            <input type="text" name="add_stu_id" id="add_username" placeholder={{ user.St_ID }}>
                         </div>
                         <div class="field half">
                             <label for="add_password">姓名</label>
-                            <input type="text" name="add_stu_name" id="add_password" placeholder={{ user.St_Name }}/>
+                            <input type="text" name="add_stu_name" id="add_password" placeholder={{ user.St_Name }}>
                         </div>
                         <div class="field half">
                             <label for="add_st_id">性别</label>
-                            <input type="text" name="add_stu_sex" id="add_st_id" placeholder={{ user.St_Sex }}/>
+                            <input type="text" name="add_stu_sex" id="add_st_id" placeholder={{ user.St_Sex }}>
                         </div>
                         <div class="field half">
                             <label for="add_st_id">生日</label>
-                            <input type="text" name="add_stu_birth" id="add_st_id" placeholder={{ user.Birthdate }}/>
+                            <input type="text" name="add_stu_birth" id="add_st_id" placeholder={{ user.Birthdate }}>
                         </div>
                         <div class="field half">
                             <label for="add_st_id">班级</label>
-                            <input type="text" name="add_stu_class" id="add_st_id" placeholder={{ user.Cl_Name }}/>
+                            <input type="text" name="add_stu_class" id="add_st_id" placeholder={{ user.Cl_Name }}>
                         </div>
                         <div class="field half">
                             <label for="add_st_id">联系电话</label>
-                            <input type="text" name="add_stu_phone" id="add_st_id" placeholder={{ user.Telephone }}/>
+                            <input type="text" name="add_stu_phone" id="add_st_id" placeholder={{ user.Telephone }}>
                         </div>
                         <div class="field half">
                             <label for="add_st_id">政治面貌</label>
-                            <input type="text" name="add_stu_zzmm" id="add_st_id" placeholder={{ user.PSTS }}/>
+                            <input type="text" name="add_stu_zzmm" id="add_st_id" placeholder={{ user.PSTS }}>
                         </div>
                         <div class="field half">
                             <label for="add_st_id">地址</label>
-                            <input type="text" name="add_stu_addr" id="add_st_id" placeholder={{ user.Address }}/>
+                            <input type="text" name="add_stu_addr" id="add_st_id" placeholder={{ user.Address }}>
                         </div>
                         <div class="field half">
                             <label for="add_st_id">简介</label>
-                            <input type="text" name="add_stu_resu" id="add_st_id" placeholder={{ user.Resume }}/>
+                            <input type="text" name="add_stu_resu" id="add_st_id" placeholder={{ user.Resume }}>
                         </div>
                         <div class="field half">
                             <label for="add_st_id">学院ID</label>
-                            <input type="text" name="add_st_id" id="add_st_id" placeholder={{ user.D_ID }}/>
+                            <input type="text" name="add_st_id" id="add_st_id" placeholder={{ user.D_ID }}>
                         </div>
                     </div>
 
