--- a/templates/update_student.html
+++ b/templates/update_student.html
@@ -29,7 +29,16 @@
 
     <!-- Header -->
     <header id="header">
-        <a href="https://www.csu.edu.cn" class="logo"><strong>中南大学</strong> <span>教务系统/管理员/学生与成绩管理/学生管理</span></a>
+        <!-- 文件夹地址的效果BEGIN -->
+        <a href="https://www.csu.edu.cn" class="logo"><strong>中南大学</strong></a>
+        <span>
+            <a href="http://192.168.137.1:8080/public/login.php" target="_blank">教务系统</a>
+            /
+            <a href="http://192.168.137.1:8080/public/php_service/panel_admin.php" target="_blank">管理员</a>
+            /
+            <a href="http://{{ ip }}:5000">成绩管理</a>
+        </span>
+        <!-- 文件夹地址的效果END -->
         <nav class="navbar">
             <a href="#one">学生管理与查询</a>
             <a href="#two">修改学生信息</a>
@@ -105,8 +114,9 @@
     <footer id="footer">
         <div class="inner">
             <ul class="copyright">
-                <li>thetheorange , Adapted From HTML5 UP</li>
-                <li><i class="icon brands alt fa-php"></i>
+                <li>&copy;thetheorange , Adapted From HTML5 UP</li>
+                <li>
+                    <i class="icon brands alt fa-php"></i>
                     <i class="icon brands alt fa-html5"></i>
                     <i class="icon brands alt fa-css3"></i>
                     <i class="icon brands alt fa-js"></i>
@@ -126,5 +136,5 @@
 <script src="../static/assets/js/breakpoints.min.js"></script>
 <script src="../static/assets/js/util.js"></script>
 <script src="../static/assets/js/main.js"></script>
-
-
+</body>
+</html>
